# AI-Internal-Manager

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  SAMPLE_DATA_GUIDE.md  SAMPLE_DATA_QUICK_START.txt  SEED_DATA_README.md  alembic.ini  pyproject.toml  run_zoom_bot.py  sample_data_overview.json  seed_data.sh  seed_integration_data.py  seed_sample_data.py  vercel.json  verify_keywords_ai.py
.claude/skills/bug-fix/: SKILL.md
alembic/: env.py
alembic/versions/: 20260201_0155_419200b21903_initial_schema.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ApiKeyModal.tsx  ChatInterface.tsx  Dashboard.tsx  KnowledgeGraph.tsx  LandingPage.tsx  Layout.tsx  Onboarding.tsx  TeamAnalytics.tsx  VoiceIndicator.tsx  VoiceOverlay.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: ApiKeyContext.tsx  RbacContext.tsx
frontend/src/hooks/: useElevenLabsVoice.ts  useVoice.ts
frontend/src/styles/: global.css
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  base.py
src/agents/evaluator/: __init__.py  agent.py  schemas.py
src/agents/knowledge/: __init__.py  agent.py  retrieval.py
src/agents/onboarding/: __init__.py  agent.py  flows.py
src/agents/orchestrator/: __init__.py  agent.py  graph.py  intents.py
src/agents/team_analysis/: __init__.py  (+2 more)
src/mcp/: __init__.py  base.py  registry.py
src/memory/: __init__.py  manager.py  org_memory.py  short_term.py  team_memory.py  user_memory.py
src/models/: __init__.py  base.py  conversation.py  database.py  onboarding.py  user.py
src/observability/: __init__.py  keywords_ai.py
src/ownership/: __init__.py  analyzer.py  ranker.py  recommender.py
src/rbac/: __init__.py  agent_guard.py  engine.py  guards.py  middleware.py  models.py
src/schemas/: __init__.py  analytics.py  auth.py  chat.py  knowledge.py  onboarding.py
src/security/: __init__.py  audit.py  context.py
src/voice/: __init__.py  agent.py  elevenlabs_client.py  join_zoom_meeting.py  realtime_zoom.py  selenium_zoom_bot.py  zoom_bot.py  zoom_integration.py
supabase/: config.toml
tests/: __init__.py  conftest.py
tests/e2e/: test_chat_flow.py
tests/integration/: test_api.py
tests/unit/: test_agents.py  test_memory.py
workers/: celery_app.py  schedules.py
workers/tasks/: consolidation.py  ingestion.py
(+32 files in other folders)
