[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-internal-manager"
version = "0.1.0"
description = "Multi-agent AI system for internal company knowledge management, team analytics, and employee onboarding"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AI Internal Manager Team" }
]
dependencies = [
    # Core
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "aiosqlite>=0.20.0",

    # Redis
    "redis>=5.0.0",
    "aioredis>=2.0.0",

    # Neo4j
    "neo4j>=5.15.0",

    # Vector Database
    "qdrant-client>=1.7.0",

    # LLM & Agents
    "anthropic>=0.18.0",
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.20",

    # Embeddings
    "voyageai>=0.2.0",
    "openai>=1.10.0",
    "tiktoken>=0.5.0",

    # Task Queue
    "celery[redis]>=5.3.0",

    # Voice
    "deepgram-sdk>=3.0.0",
    "elevenlabs>=0.2.0",

    # Browser Automation (for Zoom)
    "playwright>=1.40.0",

    # HTTP Client
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Utilities
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",

    # Keywords AI Tracing
    "keywordsai-tracing>=0.0.59",

    # Observability
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
